--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "curd-app",
+  "name": "latest-app-with-module",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:curd-app": "node dist/curd-app/server/server.mjs"
+    "serve:ssr:LatestAppWithModule": "node dist/latest-app-with-module/server/server.mjs"
   },
   "private": true,
   "dependencies": {
@@ -23,7 +23,7 @@
     "@angular/ssr": "^17.3.5",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.3",
+    "bootstrap": "^5.3.2",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
